# sing-sword

./: .gitignore  Cargo.toml  tauri.conf.json
resources/: sing-box-default.json
src/: main.rs
src/config/: sing_box.rs  sword.rs
src/service/: core.rs  tray.rs
src/utils/: dirs.rs  init.rs  mod.rs  sysopt.rs  tauri_handlers.rs
