[package]
name = "sing-sword"
version = "0.0.1"
description = "The proxy launch platform"
authors = ["zzzgydi"]
license = "GPL-3.0"
repository = "https://github.com/zzzgydi/sing-sword"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
log = "0.4"
open = "3.0"
warp = "0.3"
anyhow = "1.0"
log4rs = "1.0"
chrono = "0.4"
once_cell = "1.14"
serde_json = { version = "1.0", features = ["preserve_order"] }
auto-launch = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["clipboard-all", "dialog-all", "notification", "process-all", "shell-all", "system-tray"] }
sysproxy = "0.2.0"

[features]
default = ["custom-protocol", "stdout-log"]
custom-protocol = ["tauri/custom-protocol"]
stdout-log = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
